--- a/home.html
+++ b/home.html
@@ -4,129 +4,162 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Paygo - حجز الفنادق</title>
+
+  <!-- أيقونة التطبيق للهاتف -->
+  <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="180x180">
+  <link rel="icon" type="image/png" sizes="32x32" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="apple-touch-icon.png">
+
+  <!-- Bootstrap RTL -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
+
   <style>
     body {
+      background: #ffffff;
       font-family: 'Cairo', sans-serif;
       direction: rtl;
-      background: #f4f4f4;
+      color: #000;
+      margin: 0;
+      padding: 0;
     }
+
+    .navbar {
+      background-color: #222;
+      padding: 10px 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .navbar img {
+      height: 70px;
+    }
+
     .search-box {
       background: #fff;
+      color: #000;
       padding: 20px;
       border-radius: 12px;
-      max-width: 600px;
-      margin: 40px auto;
+      max-width: 520px;
+      margin: 20px auto;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      position: relative;
     }
+
     .form-label {
-      font-size: 14px;
+      font-size: 13px;
       color: #444;
+      margin-bottom: 4px;
     }
-    input, select {
+
+    .search-box input,
+    .search-box button {
+      height: 45px;
       border-radius: 8px;
-      margin-bottom: 10px;
     }
-    .suggestions {
-      border: 1px solid #ccc;
-      max-height: 150px;
-      overflow-y: auto;
-      background-color: white;
-      position: absolute;
-      width: 100%;
-      top: 105px;
-      z-index: 1000;
-      border-radius: 5px;
+
+    .destinations {
+      margin-top: 40px;
+      padding: 20px;
     }
-    .suggestions div {
+
+    .destination-card {
+      background: #fff;
+      color: #000;
+      border-radius: 12px;
       padding: 10px;
-      cursor: pointer;
+      text-align: center;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      height: 100%;
     }
-    .suggestions div:hover {
-      background-color: #f0f0f0;
+
+    .destination-card img {
+      width: 100%;
+      border-radius: 8px;
+      height: 120px;
+      object-fit: cover;
+    }
+
+    .destination-card h5 {
+      margin-top: 10px;
+    }
+
+    .footer {
+      background-color: #222;
+      color: #fff;
+      text-align: center;
+      padding: 14px;
+      position: fixed;
+      width: 100%;
+      bottom: 0;
+      z-index: 999;
     }
   </style>
 </head>
 <body>
 
-<div class="search-box">
-  <form id="searchForm">
-    <label class="form-label">المدينة</label>
-    <input type="text" id="cityInput" class="form-control" placeholder="أدخل المدينة" autocomplete="off" required>
-    <div id="suggestions" class="suggestions"></div>
+  <!-- الشريط العلوي -->
+  <div class="navbar">
+    <img src="paygs.png" alt="Paygo Logo">
+  </div>
 
-    <label class="form-label">الوصول</label>
-    <input type="date" id="checkIn" class="form-control" required>
+  <!-- نموذج البحث -->
+  <div class="search-box">
+    <div class="mb-3">
+      <input type="text" class="form-control" placeholder="إلى أين تريد أن تذهب؟" />
+    </div>
 
-    <label class="form-label">المغادرة</label>
-    <input type="date" id="checkOut" class="form-control" required>
+    <div class="d-flex gap-2 mb-3">
+      <div class="flex-fill">
+        <label class="form-label">الوصول</label>
+        <input type="text" class="form-control" value="الثلاثاء، 2 يوليو" readonly />
+      </div>
+      <div class="flex-fill">
+        <label class="form-label">المغادرة</label>
+        <input type="text" class="form-control" value="الأربعاء، 3 يوليو" readonly />
+      </div>
+    </div>
 
-    <button type="submit" class="btn btn-primary w-100 mt-3">ابحث</button>
-  </form>
-</div>
+    <div class="mb-3">
+      <input type="text" class="form-control" value="1 غرفة، 2 بالغون، 0 أطفال" readonly />
+    </div>
 
-<script>
-  let token = "";
-  async function fetchToken() {
-    const res = await fetch("https://test.api.amadeus.com/v1/security/oauth2/token", {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/x-www-form-urlencoded"
-      },
-      body: "grant_type=client_credentials&client_id=UspRLCHI82AtaL2AsflFSLYxrRh0asMB&client_secret=R1ZGO9tgOA4P5EPJ"
-    });
-    const data = await res.json();
-    token = data.access_token;
-  }
+    <button class="btn btn-primary w-100">ابحث</button>
+  </div>
 
-  async function fetchCities(query) {
-    if (!token) await fetchToken();
-    const res = await fetch(`https://test.api.amadeus.com/v1/reference-data/locations?subType=CITY&keyword=${query}`, {
-      headers: {
-        "Authorization": `Bearer ${token}`
-      }
-    });
-    const data = await res.json();
-    return data.data || [];
-  }
+  <!-- الوجهات -->
+  <div class="container destinations">
+    <div class="row g-3">
+      <div class="col-6">
+        <div class="destination-card">
+          <img src="dubai.png" alt="دبي">
+          <h5>دبي</h5>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="destination-card">
+          <img src="qairo.png" alt="القاهرة">
+          <h5>القاهرة</h5>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="destination-card">
+          <img src="istanbul.png" alt="إسطنبول">
+          <h5>إسطنبول</h5>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="destination-card">
+          <img src="thailand.png" alt="تايلاند">
+          <h5>تايلاند</h5>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  const cityInput = document.getElementById("cityInput");
-  const suggestionsDiv = document.getElementById("suggestions");
-
-  cityInput.addEventListener("input", async () => {
-    const query = cityInput.value;
-    if (query.length < 2) {
-      suggestionsDiv.innerHTML = "";
-      return;
-    }
-    const results = await fetchCities(query);
-    suggestionsDiv.innerHTML = results.map(city => `<div data-code="${city.iataCode}">${city.name}</div>`).join("");
-  });
-
-  suggestionsDiv.addEventListener("click", (e) => {
-    if (e.target.dataset.code) {
-      cityInput.value = e.target.innerText;
-      cityInput.setAttribute("data-code", e.target.dataset.code);
-      suggestionsDiv.innerHTML = "";
-    }
-  });
-
-  document.getElementById("searchForm").addEventListener("submit", async function(e) {
-    e.preventDefault();
-    const city = cityInput.getAttribute("data-code");
-    const checkIn = document.getElementById("checkIn").value;
-    const checkOut = document.getElementById("checkOut").value;
-
-    if (!city || !checkIn || !checkOut) {
-      alert("يرجى إدخال جميع البيانات");
-      return;
-    }
-
-    // توجيه إلى صفحة الفنادق مع البيانات
-    window.location.href = `hotels.html?city=${city}&checkIn=${checkIn}&checkOut=${checkOut}`;
-  });
-</script>
+  <!-- الشريط السفلي -->
+  <div class="footer">
+    جميع الحقوق محفوظة © Paygo 2025
+  </div>
 
 </body>
 </html>
