--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Paygo</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <style>
@@ -13,29 +13,32 @@
 
     .navbar {
       background-color: #1e1e1e;
+      padding: 10px 0;
     }
 
-    .navbar-brand {
-      font-size: 26px;
-      font-weight: bold;
-      color: white !important;
+    .navbar-brand img {
+      height: 40px;
+      display: block;
+      margin: 0 auto;
     }
 
     .search-box {
-      background-color: white;
+      background-color: #ffffff;
       border-radius: 10px;
       padding: 20px;
       margin: 20px auto;
-      max-width: 600px;
+      max-width: 95%;
       box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
 
-    .form-control {
+    .search-box .form-control {
       margin-bottom: 10px;
+      font-size: 14px;
     }
 
     .btn-primary {
       width: 100%;
+      font-weight: bold;
     }
 
     .city-grid {
@@ -43,7 +46,7 @@
       grid-template-columns: repeat(2, 1fr);
       gap: 15px;
       padding: 20px;
-      margin-bottom: 80px; /* مسافة إضافية لتجنب التداخل مع الشريط السفلي */
+      margin-bottom: 90px; /* تفادي التداخل مع الفوتر */
     }
 
     .city-card {
@@ -66,31 +69,47 @@
     }
 
     footer {
-      padding: 20px 0;
       background-color: #1e1e1e;
       color: white;
       text-align: center;
+      padding: 15px 0;
+      font-size: 14px;
+    }
+
+    @media (max-width: 768px) {
+      .search-box .d-flex .form-control {
+        margin-bottom: 10px;
+        width: 100%;
+      }
+      .search-box .d-flex {
+        flex-direction: column;
+      }
     }
   </style>
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg">
-    <div class="container">
-      <a class="navbar-brand mx-auto" href="#">Paygo</a>
-    </div>
+  <!-- الشريط العلوي مع الشعار -->
+  <nav class="navbar">
+    <a class="navbar-brand mx-auto" href="#">
+      <img src="images/paygs.png" alt="Paygo Logo">
+    </a>
   </nav>
 
+  <!-- مربع البحث -->
   <div class="search-box">
-    <input type="text" class="form-control" placeholder="المدينة">
+    <input type="text" class="form-control" placeholder="ابحث عن مدينة" />
+
     <div class="d-flex justify-content-between">
-      <input type="date" class="form-control me-2" value="2025-07-02">
-      <input type="date" class="form-control ms-2" value="2025-07-03">
+      <input type="date" class="form-control me-1" value="2025-07-02">
+      <input type="date" class="form-control ms-1" value="2025-07-03">
     </div>
-    <input type="text" class="form-control" value="1 غرفة، 2 بالغون، 0 أطفال" readonly>
+
+    <input type="text" class="form-control" value="1 غرفة، 2 بالغون، 0 أطفال" readonly />
     <button class="btn btn-primary mt-2">ابحث</button>
   </div>
 
+  <!-- الوجهات السياحية -->
   <div class="city-grid">
     <div class="city-card">
       <img src="images/qairo.png" alt="القاهرة">
@@ -110,6 +129,7 @@
     </div>
   </div>
 
+  <!-- الشريط السفلي -->
   <footer>
     <p>جميع الحقوق محفوظة © Paygo 2025</p>
   </footer>
