--- a/home.html
+++ b/home.html
@@ -2,137 +2,223 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Paygo</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Paygo - حجز الفنادق</title>
+
+  <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="180x180">
+  <link rel="icon" type="image/png" sizes="32x32" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="apple-touch-icon.png">
+
+  <!-- Bootstrap RTL -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
+
   <style>
+    html, body {
+      min-height: 100vh;
+      margin: 0;
+      padding: 0;
+    }
+
     body {
-      background-color: #ffffff;
-      font-family: 'Tahoma', sans-serif;
+      display: flex;
+      flex-direction: column;
+      font-family: 'Cairo', sans-serif;
+      background: #ffffff;
+      direction: rtl;
+      color: #000;
+    }
+
+    .main-content {
+      flex: 1;
     }
 
     .navbar {
-      background-color: #1e1e1e;
-      padding: 10px 0;
+      background-color: #222;
+      height: 60px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
-    .navbar-brand img {
-      height: 40px;
-      display: block;
-      margin: 0 auto;
+    .navbar img {
+      height: 50px;
     }
 
     .search-box {
-      background-color: #ffffff;
-      border-radius: 10px;
+      background: #fff;
       padding: 20px;
-      margin: 20px auto;
-      max-width: 95%;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    }
-
-    .search-box .form-control {
-      margin-bottom: 10px;
-      font-size: 14px;
-    }
-
-    .btn-primary {
-      width: 100%;
-      font-weight: bold;
-    }
-
-    .city-grid {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 15px;
-      padding: 20px;
-      margin-bottom: 90px; /* تفادي التداخل مع الفوتر */
-    }
-
-    .city-card {
       border-radius: 12px;
-      overflow: hidden;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      text-align: center;
-      background-color: #fff;
+      max-width: 520px;
+      margin: 30px auto;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
 
-    .city-card img {
+    .form-label {
+      font-size: 13px;
+      color: #444;
+      margin-bottom: 4px;
+    }
+
+    .search-box input,
+    .search-box button {
+      height: 45px;
+      border-radius: 8px;
+    }
+
+    .destinations {
+      padding: 20px;
+    }
+
+    .destination-card {
+      background: #fff;
+      color: #000;
+      border-radius: 12px;
+      padding: 10px;
+      text-align: center;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      height: 100%;
+    }
+
+    .destination-card img {
       width: 100%;
+      border-radius: 8px;
       height: 120px;
       object-fit: cover;
     }
 
-    .city-card p {
-      margin: 10px 0;
-      font-weight: bold;
+    .destination-card h5 {
+      margin-top: 10px;
     }
 
-    footer {
-      background-color: #1e1e1e;
-      color: white;
+    .travel-offers {
+      overflow: hidden;
+      background-color: #f8f8f8;
+      border-radius: 10px;
+      margin: 0 0 20px 0;
+    }
+
+    .slider-track {
+      display: flex;
+      animation: scrollSlider 20s linear infinite;
+      width: fit-content;
+    }
+
+    .slide {
+      flex: 0 0 100vw;
+      height: 160px;
+      overflow: hidden;
+    }
+
+    .slide img {
+      width: 100vw;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+    }
+
+    @keyframes scrollSlider {
+      0% {
+        transform: translateX(0);
+      }
+      100% {
+        transform: translateX(-400vw);
+      }
+    }
+
+    .footer {
+      background-color: #222;
+      color: #fff;
       text-align: center;
-      padding: 15px 0;
-      font-size: 14px;
-    }
-
-    @media (max-width: 768px) {
-      .search-box .d-flex .form-control {
-        margin-bottom: 10px;
-        width: 100%;
-      }
-      .search-box .d-flex {
-        flex-direction: column;
-      }
+      padding: 12px;
     }
   </style>
 </head>
 <body>
 
-  <!-- الشريط العلوي مع الشعار -->
-  <nav class="navbar">
-    <a class="navbar-brand mx-auto" href="#">
-      <img src="images/paygs.png" alt="Paygo Logo">
-    </a>
-  </nav>
-
-  <!-- مربع البحث -->
-  <div class="search-box">
-    <input type="text" class="form-control" placeholder="ابحث عن مدينة" />
-
-    <div class="d-flex justify-content-between">
-      <input type="date" class="form-control me-1" value="2025-07-02">
-      <input type="date" class="form-control ms-1" value="2025-07-03">
-    </div>
-
-    <input type="text" class="form-control" value="1 غرفة، 2 بالغون، 0 أطفال" readonly />
-    <button class="btn btn-primary mt-2">ابحث</button>
+  <!-- الشريط العلوي -->
+  <div class="navbar">
+    <img src="paygs.png" alt="Paygo Logo">
   </div>
 
-  <!-- الوجهات السياحية -->
-  <div class="city-grid">
-    <div class="city-card">
-      <img src="images/qairo.png" alt="القاهرة">
-      <p>القاهرة</p>
+  <!-- المحتوى الرئيسي -->
+  <div class="main-content">
+
+    <!-- نموذج البحث -->
+    <div class="search-box">
+      <div class="mb-3">
+        <input type="text" class="form-control" placeholder="إلى أين تريد أن تذهب؟" />
+      </div>
+
+      <div class="d-flex gap-2 mb-3">
+        <div class="flex-fill">
+          <label class="form-label">الوصول</label>
+          <input type="text" class="form-control" value="الثلاثاء، 2 يوليو" readonly />
+        </div>
+        <div class="flex-fill">
+          <label class="form-label">المغادرة</label>
+          <input type="text" class="form-control" value="الأربعاء، 3 يوليو" readonly />
+        </div>
+      </div>
+
+      <div class="mb-3">
+        <input type="text" class="form-control" value="1 غرفة، 2 بالغون، 0 أطفال" readonly />
+      </div>
+
+      <button class="btn btn-primary w-100">ابحث</button>
     </div>
-    <div class="city-card">
-      <img src="images/dubai.png" alt="دبي">
-      <p>دبي</p>
+
+    <!-- الوجهات -->
+    <div class="container destinations">
+      <div class="row g-3">
+        <div class="col-6">
+          <div class="destination-card">
+            <img src="dubai.png" alt="دبي">
+            <h5>دبي</h5>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="destination-card">
+            <img src="qairo.png" alt="القاهرة">
+            <h5>القاهرة</h5>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="destination-card">
+            <img src="istanbul.png" alt="إسطنبول">
+            <h5>إسطنبول</h5>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="destination-card">
+            <img src="thailand.png" alt="تايلاند">
+            <h5>تايلاند</h5>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="city-card">
-      <img src="images/thailand.png" alt="تايلاند">
-      <p>تايلاند</p>
+
+    <!-- عنوان العروض -->
+    <div class="d-flex justify-content-between align-items-center px-3 mt-3 mb-2">
+      <h5 class="mb-0">عروض السفر الحصرية</h5>
+      <a href="offers.html" class="text-decoration-none text-primary small">جميع العروض</a>
     </div>
-    <div class="city-card">
-      <img src="images/istanbul.png" alt="اسطنبول">
-      <p>اسطنبول</p>
+
+    <!-- سلايدر العروض -->
+    <div class="travel-offers">
+      <div class="slider-track">
+        <div class="slide"><img src="offer1.jpg" alt="عرض 1"></div>
+        <div class="slide"><img src="offer2.jpg" alt="عرض 2"></div>
+        <div class="slide"><img src="offer3.jpg" alt="عرض 3"></div>
+        <div class="slide"><img src="offer4.jpg" alt="عرض 4"></div>
+      </div>
     </div>
+
   </div>
 
   <!-- الشريط السفلي -->
-  <footer>
-    <p>جميع الحقوق محفوظة © Paygo 2025</p>
-  </footer>
+  <div class="footer">
+    جميع الحقوق محفوظة © Paygo 2025
+  </div>
 
 </body>
 </html>
