--- a/home.html
+++ b/home.html
@@ -1,208 +1,311 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <title>نتائج الفنادق - Paygo</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Paygo - حجز الفنادق</title>
+
+  <link rel="apple-touch-icon" href="apple-touch-icon.png" sizes="180x180">
+  <link rel="icon" type="image/png" sizes="32x32" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="apple-touch-icon.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
 
   <style>
-    body {
-      background-color: #f7f7f7;
-      font-family: 'Cairo', sans-serif;
-    }
-
-    .hotel-card {
-      background: #fff;
-      border-radius: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-      padding: 15px;
-      margin-bottom: 20px;
-    }
-
-    .hotel-card h5 {
-      margin-bottom: 5px;
-    }
-
-    .hotel-card p {
+    html, body {
+      min-height: 100vh;
       margin: 0;
-      font-size: 14px;
-      color: #555;
+      padding: 0;
     }
 
-    .header {
+    body {
+      display: flex;
+      flex-direction: column;
+      font-family: 'Cairo', sans-serif;
+      background: #ffffff;
+      direction: rtl;
+      color: #000;
+    }
+
+    .main-content {
+      flex: 1;
+    }
+
+    .navbar {
+      background-color: #222;
+      height: 60px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .navbar img {
+      height: 50px;
+    }
+
+    .search-box {
+      background: #fff;
+      padding: 20px;
+      border-radius: 12px;
+      max-width: 520px;
+      margin: 30px auto;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      position: relative;
+    }
+
+    .form-label {
+      font-size: 13px;
+      color: #444;
+      margin-bottom: 4px;
+    }
+
+    .search-box input,
+    .search-box button {
+      height: 45px;
+      border-radius: 8px;
+    }
+
+    .autocomplete-suggestions {
+      position: absolute;
+      background: #fff;
+      border: 1px solid #ccc;
+      max-height: 200px;
+      overflow-y: auto;
+      z-index: 10;
+      width: 100%;
+      top: 70px;
+    }
+
+    .autocomplete-suggestions div {
+      padding: 8px;
+      cursor: pointer;
+    }
+
+    .autocomplete-suggestions div:hover {
+      background-color: #f0f0f0;
+    }
+
+    .destinations {
+      padding: 20px;
+    }
+
+    .destination-card {
+      background: #fff;
+      color: #000;
+      border-radius: 12px;
+      padding: 10px;
+      text-align: center;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      height: 100%;
+    }
+
+    .destination-card img {
+      width: 100%;
+      border-radius: 8px;
+      height: 120px;
+      object-fit: cover;
+    }
+
+    .destination-card h5 {
+      margin-top: 10px;
+    }
+
+    .travel-offers {
+      overflow: hidden;
+      background-color: #f8f8f8;
+      border-radius: 10px;
+      margin: 0 0 20px 0;
+    }
+
+    .slider-track {
+      display: flex;
+      animation: scrollSlider 20s linear infinite;
+      width: fit-content;
+    }
+
+    .slide {
+      flex: 0 0 100vw;
+      height: 160px;
+      overflow: hidden;
+    }
+
+    .slide img {
+      width: 100vw;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+    }
+
+    @keyframes scrollSlider {
+      0% { transform: translateX(0); }
+      100% { transform: translateX(-400vw); }
+    }
+
+    .footer {
       background-color: #222;
       color: #fff;
-      padding: 15px;
       text-align: center;
-    }
-
-    .filters {
-      background: #fff;
-      border-radius: 10px;
-      padding: 15px;
-      margin: 20px 10px 0 10px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      padding: 12px;
     }
   </style>
 </head>
 <body>
 
-  <div class="header">
-    <h4>نتائج الفنادق</h4>
+  <!-- الشريط العلوي -->
+  <div class="navbar">
+    <img src="paygs.png" alt="Paygo Logo">
   </div>
 
-  <!-- الفلاتر -->
-  <div class="filters">
-    <div class="row g-2">
-      <div class="col-6 col-md-3">
-        <label>الحد الأدنى للسعر</label>
-        <input type="number" id="minPrice" class="form-control" placeholder="مثال: 100">
+  <!-- المحتوى الرئيسي -->
+  <div class="main-content">
+
+    <!-- نموذج البحث -->
+    <div class="search-box">
+      <div class="mb-3 position-relative">
+        <input id="city" type="text" class="form-control" placeholder="إلى أين تريد أن تذهب؟" autocomplete="off" />
+        <div id="suggestions" class="autocomplete-suggestions"></div>
       </div>
-      <div class="col-6 col-md-3">
-        <label>الحد الأعلى للسعر</label>
-        <input type="number" id="maxPrice" class="form-control" placeholder="مثال: 500">
+
+      <div class="d-flex gap-2 mb-3">
+        <div class="flex-fill">
+          <label class="form-label">الوصول</label>
+          <input id="checkin" type="date" class="form-control" />
+        </div>
+        <div class="flex-fill">
+          <label class="form-label">المغادرة</label>
+          <input id="checkout" type="date" class="form-control" />
+        </div>
       </div>
-      <div class="col-6 col-md-3">
-        <label>عدد النجوم</label>
-        <select id="stars" class="form-control">
-          <option value="">الكل</option>
-          <option value="5">5 نجوم</option>
-          <option value="4">4 نجوم</option>
-          <option value="3">3 نجوم</option>
-        </select>
+
+      <div class="mb-3">
+        <input id="guestsDisplay" type="text" class="form-control" value="1 غرفة، 2 بالغون، 0 أطفال" readonly onclick="toggleGuestBox()" />
+        <div id="guestBox" class="bg-light p-3 mt-2 rounded border" style="display:none;">
+          <div class="mb-2">
+            <label>الغرف:</label>
+            <input id="roomCount" type="number" class="form-control" value="1" min="1">
+          </div>
+          <div class="mb-2">
+            <label>البالغون:</label>
+            <input id="adultCount" type="number" class="form-control" value="2" min="1">
+          </div>
+          <div class="mb-2">
+            <label>الأطفال:</label>
+            <input id="childCount" type="number" class="form-control" value="0" min="0">
+          </div>
+          <button class="btn btn-sm btn-primary mt-2 w-100" onclick="updateGuestDisplay()">تم</button>
+        </div>
       </div>
-      <div class="col-6 col-md-3 d-flex align-items-end">
-        <button class="btn btn-primary w-100" onclick="applyFilters()">تصفية</button>
+
+      <button id="searchBtn" class="btn btn-primary w-100">ابحث</button>
+
+      <script>
+        const apiKey = "UspRLCHI82AtaL2AsflFSLYxrRh0asMB";
+        const apiSecret = "R1ZGO9tgOA4P5EPJ";
+        let accessToken = "";
+
+        async function getAccessToken() {
+          const res = await fetch("https://test.api.amadeus.com/v1/security/oauth2/token", {
+            method: "POST",
+            headers: { "Content-Type": "application/x-www-form-urlencoded" },
+            body: new URLSearchParams({
+              grant_type: "client_credentials",
+              client_id: apiKey,
+              client_secret: apiSecret
+            })
+          });
+          const data = await res.json();
+          accessToken = data.access_token;
+        }
+
+        async function fetchSuggestions(query) {
+          const res = await fetch(`https://test.api.amadeus.com/v1/reference-data/locations?subType=CITY&keyword=${encodeURIComponent(query)}&view=FULL`, {
+            headers: { Authorization: `Bearer ${accessToken}` }
+          });
+          const data = await res.json();
+          return data.data?.map(item => item.address.cityName) || [];
+        }
+
+        document.getElementById("city").addEventListener("input", async function () {
+          const value = this.value;
+          const suggestionsBox = document.getElementById("suggestions");
+          suggestionsBox.innerHTML = "";
+
+          if (value.length < 2) return;
+
+          const suggestions = await fetchSuggestions(value);
+          suggestions.forEach(city => {
+            const div = document.createElement("div");
+            div.textContent = city;
+            div.onclick = () => {
+              document.getElementById("city").value = city;
+              suggestionsBox.innerHTML = "";
+            };
+            suggestionsBox.appendChild(div);
+          });
+        });
+
+        function toggleGuestBox() {
+          const box = document.getElementById('guestBox');
+          box.style.display = box.style.display === 'none' ? 'block' : 'none';
+        }
+
+        function updateGuestDisplay() {
+          const rooms = document.getElementById('roomCount').value;
+          const adults = document.getElementById('adultCount').value;
+          const children = document.getElementById('childCount').value;
+          const display = `${rooms} غرفة، ${adults} بالغون، ${children} أطفال`;
+          document.getElementById('guestsDisplay').value = display;
+          toggleGuestBox();
+        }
+
+        document.getElementById('searchBtn').addEventListener('click', function () {
+          const city = document.getElementById('city').value.trim();
+          const checkIn = document.getElementById('checkin').value;
+          const checkOut = document.getElementById('checkout').value;
+          const rooms = document.getElementById('roomCount').value;
+          const adults = document.getElementById('adultCount').value;
+          const children = document.getElementById('childCount').value;
+
+          if (city && checkIn && checkOut) {
+            const url = `hotels.html?city=${encodeURIComponent(city)}&checkin=${encodeURIComponent(checkIn)}&checkout=${encodeURIComponent(checkOut)}&rooms=${rooms}&adults=${adults}&children=${children}`;
+            window.location.href = url;
+          } else {
+            alert("يرجى ملء جميع الحقول.");
+          }
+        });
+
+        // الحصول على التوكن عند بداية الصفحة
+        getAccessToken();
+      </script>
+    </div>
+
+    <!-- الوجهات + العروض (كما في النسخة السابقة) -->
+
+    <!-- الوجهات -->
+    <div class="container destinations">
+      <div class="row g-3">
+        <div class="col-6"><div class="destination-card"><img src="dubai.png" alt="دبي"><h5>دبي</h5></div></div>
+        <div class="col-6"><div class="destination-card"><img src="qairo.png" alt="القاهرة"><h5>القاهرة</h5></div></div>
+        <div class="col-6"><div class="destination-card"><img src="istanbul.png" alt="إسطنبول"><h5>إسطنبول</h5></div></div>
+        <div class="col-6"><div class="destination-card"><img src="thailand.png" alt="تايلاند"><h5>تايلاند</h5></div></div>
       </div>
     </div>
+
+    <div class="d-flex justify-content-between align-items-center px-3 mt-3 mb-2">
+      <h5 class="mb-0">عروض السفر الحصرية</h5>
+      <a href="offers.html" class="text-decoration-none text-primary small">جميع العروض</a>
+    </div>
+
+    <div class="travel-offers">
+      <div class="slider-track">
+        <div class="slide"><img src="offer1.jpg" alt="عرض 1"></div>
+        <div class="slide"><img src="offer2.jpg" alt="عرض 2"></div>
+        <div class="slide"><img src="offer3.jpg" alt="عرض 3"></div>
+        <div class="slide"><img src="offer4.jpg" alt="عرض 4"></div>
+      </div>
+    </div>
+
   </div>
 
-  <!-- النتائج -->
-  <div class="container mt-4" id="hotels-container">
-    <p>جاري تحميل الفنادق...</p>
-  </div>
-
-  <script>
-    const apiKey = "UspRLCHI82AtaL2AsflFSLYxrRh0asMB";
-    const apiSecret = "R1ZGO9tgOA4P5EPJ";
-    let allHotels = []; // لتخزين كل الفنادق بدون تصفية
-
-    async function getAccessToken() {
-      const response = await fetch("https://test.api.amadeus.com/v1/security/oauth2/token", {
-        method: "POST",
-        headers: { "Content-Type": "application/x-www-form-urlencoded" },
-        body: new URLSearchParams({
-          grant_type: "client_credentials",
-          client_id: apiKey,
-          client_secret: apiSecret
-        })
-      });
-      const data = await response.json();
-      return data.access_token;
-    }
-
-    function getQueryParams() {
-      const params = new URLSearchParams(window.location.search);
-      return {
-        city: params.get("city"),
-        checkin: params.get("checkin"),
-        checkout: params.get("checkout"),
-        rooms: params.get("rooms") || "1",
-        adults: params.get("adults") || "2",
-        children: params.get("children") || "0"
-      };
-    }
-
-    async function searchHotels(token, cityCode, checkin, checkout, adults) {
-      const url = `https://test.api.amadeus.com/v2/shopping/hotel-offers?cityCode=${cityCode}&checkInDate=${checkin}&checkOutDate=${checkout}&adults=${adults}`;
-      const response = await fetch(url, {
-        headers: { Authorization: `Bearer ${token}` }
-      });
-      return await response.json();
-    }
-
-    async function getCityCode(cityName, token) {
-      const response = await fetch(`https://test.api.amadeus.com/v1/reference-data/locations?subType=CITY&keyword=${encodeURIComponent(cityName)}&view=FULL`, {
-        headers: { Authorization: `Bearer ${token}` }
-      });
-      const data = await response.json();
-      if (data && data.data && data.data.length > 0) {
-        return data.data[0].iataCode;
-      } else {
-        throw new Error("لم يتم العثور على المدينة");
-      }
-    }
-
-    function renderHotels(hotels, rooms, adults, children) {
-      const container = document.getElementById("hotels-container");
-      container.innerHTML = "";
-
-      if (hotels.length === 0) {
-        container.innerHTML = "<p>لم يتم العثور على فنادق تطابق الفلاتر.</p>";
-        return;
-      }
-
-      hotels.forEach(hotel => {
-        const name = hotel.hotel.name || "فندق غير معروف";
-        const address = hotel.hotel.address?.lines?.join(", ") || "بدون عنوان";
-        const price = hotel.offers[0]?.price?.total || "غير متوفر";
-        const currency = hotel.offers[0]?.price?.currency || "USD";
-        const rating = hotel.hotel.rating || "غير معروف";
-
-        const card = document.createElement("div");
-        card.className = "hotel-card";
-        card.innerHTML = `
-          <h5>${name}</h5>
-          <p>العنوان: ${address}</p>
-          <p>السعر: ${price} ${currency}</p>
-          <p>عدد الغرف: ${rooms} | البالغون: ${adults} | الأطفال: ${children}</p>
-          <p>التقييم: ${rating} نجوم</p>
-        `;
-        container.appendChild(card);
-      });
-    }
-
-    function applyFilters() {
-      const min = parseFloat(document.getElementById('minPrice').value) || 0;
-      const max = parseFloat(document.getElementById('maxPrice').value) || Infinity;
-      const stars = document.getElementById('stars').value;
-
-      const filtered = allHotels.filter(hotel => {
-        const offer = hotel.offers[0];
-        const price = parseFloat(offer?.price?.total || 0);
-        const rating = hotel.hotel.rating || "";
-
-        return price >= min && price <= max && (stars === "" || rating == stars);
-      });
-
-      const { rooms, adults, children } = getQueryParams();
-      renderHotels(filtered, rooms, adults, children);
-    }
-
-    async function showHotels() {
-      const { city, checkin, checkout, rooms, adults, children } = getQueryParams();
-      const container = document.getElementById("hotels-container");
-
-      try {
-        const token = await getAccessToken();
-        const cityCode = await getCityCode(city, token);
-        const result = await searchHotels(token, cityCode, checkin, checkout, adults);
-
-        if (result.data && result.data.length > 0) {
-          allHotels = result.data;
-          renderHotels(allHotels, rooms, adults, children);
-        } else {
-          container.innerHTML = "<p>لم يتم العثور على فنادق</p>";
-        }
-      } catch (err) {
-        console.error(err);
-        container.innerHTML = "<p>حدث خطأ أثناء تحميل البيانات</p>";
-      }
-    }
-
-    showHotels();
-  </script>
-
+  <div class="footer">جميع الحقوق محفوظة © Paygo 2025</div>
 </body>
 </html>
